# kata-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  install.sh  run_clang_format.sh  vcpkg.json
.build/: .gitignore
.github/workflows/: test.yml
include/: ArgsParser.hpp  Argument.hpp  ArgumentParser.hpp  ISchema.hpp  Kata.hpp  Schema.hpp  SchemaParser.hpp  Utilities.hpp  Utils.hpp
src/: ArgsParser.cpp  Argument.cpp  ArgumentParser.cpp  Kata.cpp  Schema.cpp  SchemaParser.cpp  Utils.cpp  main.cpp
test/: AnArgumentParserFixture.cpp  AnArgumentParserFixture.hpp  ArgParserTest.cpp  ArgParserWithMockSchemaTest.cpp  ArgsParserTest.cpp  ArgumentParserTest.cpp  ArgumentParserTest_.cpp  ArgumentTest.cpp  ArgumentTests.cpp  ChristmasLightsKataTest.cpp  IntegrationTests.cpp  KataTest.cpp  SchemaValidationTests.cpp  UnhappyTests.cpp
